<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <TextView
        android:id="@+id/tvEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sf_compact_display_reqular"
        android:text="@string/editProfile"
        android:textColor="#FFFFFF"
        android:textSize="14pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="60dp"
        android:layout_height="66dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="centerCrop"
        android:tint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/tvBack"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/sf_compact_display_reqular"
        android:text="@string/back"
        android:textColor="#F6F6F6"
        android:textSize="12pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="637dp"
        android:layout_marginTop="148dp"
        android:background="#D6D6D6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068">

        <LinearLayout
            android:id="@+id/ProfileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/edittext_rounded_corners"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ProfilePic"
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivProfilePic"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@android:drawable/sym_def_app_icon" />

                <Button
                    android:id="@+id/btnProfilePic"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:baselineAligned="false"
                    android:text="@string/changePic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/username"
                    android:textAlignment="textStart"
                    android:textSize="12pt" />

                <TextView
                    android:id="@+id/tvUsername2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/username2"
                    android:textSize="9pt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/UserFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFirstname"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/firstName"
                    android:textAlignment="textStart"
                    android:textSize="12pt" />

                <TextView
                    android:id="@+id/tvFirstname2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/userFirstName"
                    android:textSize="9pt" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/UserLastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLatsname"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/userLastName"
                    android:textAlignment="textStart"
                    android:textSize="12pt" />

                <TextView
                    android:id="@+id/tvLastname2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/userLastName"
                    android:textSize="9pt" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/UserEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/email"
                    android:textAlignment="textStart"
                    android:textSize="12pt" />

                <TextView
                    android:id="@+id/tvEmail2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/userEmail"
                    android:textSize="9pt" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/UserPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/phoneNumber"
                    android:textAlignment="textStart"
                    android:textSize="12pt" />

                <TextView
                    android:id="@+id/tvPhone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_compact_display_reqular"
                    android:text="@string/userPhone"
                    android:textSize="9pt" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
